--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^19.0.3",
     "@vercel/analytics": "^1.5.0",
     "astro": "^5.2.5",
+    "firebase": "^11.5.0",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
     "ogl": "^1.0.11",
